# richat

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  deny.toml  rust-toolchain.toml  token-init.md
.github/: issue_template.md
.github/workflows/: cla.yml  release-cli.yml  release-plugin-agave.yml  release-richat.yml  test.yml
cli/: Cargo.toml  richat-track.yml
cli/src/: lib.rs  main.rs  pubsub.rs  stream.rs  stream_grpc.rs  stream_richat.rs  track.rs
client/: Cargo.toml  build.rs
client/src/: error.rs  grpc.rs  lib.rs  quic.rs  stream.rs  tcp.rs
filter/: Cargo.toml
filter/src/: config.rs  filter.rs  message.rs
filter/src/protobuf/: decode.rs  encode.rs  mod.rs
metrics/: Cargo.toml
metrics/src/: config.rs  lib.rs  macros.rs  recorder.rs  server.rs
plugin/: Cargo.toml  README.md  build.rs  config.json
plugin-agave/: Cargo.toml  README.md  build.rs  config.json
plugin-agave/benches/encode/: account.rs  block_meta.rs  entry.rs  slot.rs  transaction.rs
plugin-agave/fuzz/: Cargo.toml
plugin-agave/fuzz/fuzz_targets/: slot.rs  transaction.rs
plugin-agave/src/: channel.rs  config.rs  metrics.rs  plugin.rs
plugin-agave/src/protobuf/: message.rs  mod.rs
plugin-agave/src/protobuf/encoding/: account.rs  block_meta.rs  entry.rs  mod.rs  slot.rs  transaction.rs
plugin/benches/encode/: account.rs  block_meta.rs  entry.rs  main.rs  predefined.rs  slot.rs  transaction.rs
plugin/fuzz/: Cargo.toml
plugin/fuzz/fuzz_targets/: account.rs  blockmeta.rs  entry.rs  fuzz_target_account.rs  fuzz_target_blockmeta.rs  fuzz_target_entry.rs  fuzz_target_slot.rs  fuzz_target_transaction.rs  slot.rs  transaction.rs
plugin/src/: channel.rs  config.rs  grpc.rs  lib.rs  metrics.rs  plugin.rs  protobuf.rs  quic.rs  tcp.rs
plugin/src/protobuf/: message.rs  mod.rs
plugin/src/protobuf/encoding/: account.rs  block_meta.rs  entry.rs  mod.rs  slot.rs  transaction.rs
plugin/src/transports/: grpc.rs  mod.rs  quic.rs  tcp.rs
proto/: Cargo.toml  build.rs
proto/proto/: richat.proto
richat/: Cargo.toml  build.rs  config.yml
richat/src/: channel.rs  config.rs  lib.rs  metrics.rs  source.rs  storage.rs  util.rs  version.rs
richat/src/channel/: message.rs  mod.rs  source.rs
richat/src/grpc/: block_meta.rs  config.rs  server.rs
richat/src/pubsub/: config.rs  filter.rs  mod.rs  notification.rs  server.rs  solana.rs  tracker.rs
richat/src/richat/: config.rs  server.rs
shared/: Cargo.toml  build.rs
shared/proto/: transport.proto
shared/src/: config.rs  five8.rs  lib.rs  metrics.rs  shutdown.rs  version.rs
shared/src/jsonrpc/: helpers.rs  metrics.rs  mod.rs  requests.rs
shared/src/transports/: grpc.rs  mod.rs  quic.rs  tcp.rs
