[workspace]
resolver = "2"
members = [
    "plugin",
    "shared",
]

[workspace.package]
authors = ["Lamports Dev"]
edition = "2021"
homepage = "https://lamports.dev"
repository = "https://github.com/lamports-dev/richat"
license = "AGPL-3.0-only"
keywords = ["solana"]
publish = false

[workspace.dependencies]
affinity = "0.1.2"
agave-geyser-plugin-interface = "~2.1.1"
anyhow = "1.0.62"
bincode = "1.3.3"
cargo-lock = "10.0.1"
clap = "4.5.23"
futures = "0.3.31"
git-version = "0.3.9"
hostname = "0.4.0"
http = "1.1.0"
http-body-util = "0.1.2"
humantime-serde = "1.1.1"
hyper = "1.4.1"
hyper-util = "0.1.7"
lazy_static = "1.4.0"
log = "0.4.22"
prometheus = "0.13.4"
prost = "0.13.4"
prost-types = "0.13.4"
protobuf-src = "1.1.0"
quinn = "0.11.6"
rcgen = "0.13.1"
richat-shared = { path = "shared", version = "2.0.0" }
rustls = { version = "0.23.20", default-features = false, features = ["std", "tls12", "ring"] }
rustls-pemfile = "2.2.0"
serde = "1.0.145"
serde_json = "1.0.86"
solana-account-decoder = "~2.1.1"
solana-logger = "~2.1.1"
solana-sdk = "~2.1.1"
solana-transaction-status = "~2.1.1"
thiserror = "2.0.7"
tokio = "1.42.0"
tonic = "0.12.3"
tonic-build = "0.12.3"
tracing = "0.1.41"
vergen = "9.0.2"
yellowstone-grpc-proto = "4.1.0"

[workspace.lints.clippy]
clone_on_ref_ptr = "deny"
missing_const_for_fn = "deny"
trivially_copy_pass_by_ref = "deny"

[profile.release]
lto = true
codegen-units = 1
