[package]
name = "richat-cli"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Cli Tool"
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
bs58 = { workspace = true }
clap = { workspace = true, features = ["derive"] }
const-hex = { workspace = true }
env_logger = { workspace = true }
futures = { workspace = true }
indicatif = { workspace = true }
prost = { workspace = true }
richat-client = { workspace = true }
richat-shared = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
tokio = { workspace = true, features = ["fs"] }
tonic = { workspace = true, features = ["tls-native-roots"] }
tracing = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[lints]
workspace = true
