[package]
name = "richat-client"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Client Library"
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
futures = { workspace = true }
pin-project-lite = { workspace = true }
prost = { workspace = true }
richat-shared = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread"] }
tracing = { workspace = true }
yellowstone-grpc-proto = { workspace = true }

[lints]
workspace = true
