[package]
name = "richat-filter"
version = "3.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Filters"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = true

[dependencies]
arrayvec = { workspace = true }
base64 = { workspace = true }
bs58 = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
richat-proto = { workspace = true }
richat-shared = { workspace = true }
serde = { workspace = true, features = ["derive"] }
smallvec = { workspace = true }
solana-account = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror = { workspace = true }

[lints]
workspace = true
