[package]
name = "richat-plugin"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Agave Geyser Plugin"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "richat-plugin-config-check"
path = "src/bin/config-check.rs"

[[bench]]
name = "encode"
harness = false

[dependencies]
affinity = { workspace = true }
agave-geyser-plugin-interface = { workspace = true }
anyhow = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
hostname = { workspace = true }
http = { workspace = true }
lazy_static = { workspace = true }
log = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
prost_011 = { workspace = true }
prost-types = { workspace = true }
quinn = { workspace = true }
richat-shared = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
solana-account-decoder = { workspace = true }
solana-logger = { workspace = true }
solana-sdk = { workspace = true }
solana-storage-proto = { workspace = true }
solana-transaction-status = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tonic = { workspace = true, features = ["server", "tls"] }
yellowstone-grpc-proto = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
prost_011 = { workspace = true }
yellowstone-grpc-proto = { workspace = true, features = ["plugin"] }

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
tonic-build = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[lints]
workspace = true
