[package]
name = "richat"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat App"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
json5 = { workspace = true }
lazy_static = { workspace = true }
prometheus = { workspace = true }
richat-client = { workspace = true }
richat-shared = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_yaml = { workspace = true }
signal-hook = { workspace = true }
solana-sdk = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }
yellowstone-grpc-proto = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[lints]
workspace = true
