[package]
name = "richat"
version = "2.3.1"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat App"
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
affinity = { workspace = true }
anyhow = { workspace = true }
arrayvec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
fastwebsockets = { workspace = true, features = ["upgrade", "unstable-split"] }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
json5 = { workspace = true }
jsonrpsee-types = { workspace = true }
lazy_static = { workspace = true }
maplit = { workspace = true }
pin-project-lite = { workspace = true }
prometheus = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
rayon = { workspace = true }
richat-client = { workspace = true }
richat-filter = { workspace = true }
richat-proto = { workspace = true }
richat-shared = { workspace = true }
rustls = { workspace = true, features = ["aws_lc_rs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
serde_yaml = { workspace = true }
signal-hook = { workspace = true }
smallvec = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-rpc = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
tonic-build = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[lints]
workspace = true
