[package]
name = "richat"
version = "5.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat App"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
affinity-linux = { workspace = true }
agave-reserved-account-keys = { workspace = true }
anyhow = { workspace = true }
arrayvec = { workspace = true }
clap = { workspace = true, features = ["derive"] }
fastwebsockets = { workspace = true, features = ["upgrade", "unstable-split"] }
foldhash = { workspace = true }
futures = { workspace = true }
http-body-util = { workspace = true }
humantime-serde = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
json5 = { workspace = true }
jsonrpsee-types = { workspace = true }
maplit = { workspace = true }
metrics = { workspace = true }
metrics-exporter-prometheus = { workspace = true }
num_cpus = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
quanta = { workspace = true }
rayon = { workspace = true }
richat-client = { workspace = true }
richat-filter = { workspace = true }
richat-metrics = { workspace = true }
richat-proto = { workspace = true }
richat-shared = { workspace = true, features = ["jsonrpc"] }
rocksdb = { workspace = true }
rustls = { workspace = true, features = ["aws_lc_rs"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["raw_value"] }
serde_yaml = { workspace = true }
signal-hook = { workspace = true }
smallvec = { workspace = true }
solana-account = { workspace = true }
solana-account-decoder = { workspace = true }
solana-nohash-hasher = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }
spl-token-2022 = { workspace = true }
thiserror = { workspace = true }
tikv-jemallocator = { workspace = true }
tokio = { workspace = true }
tokio-rustls = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["ansi", "env-filter", "json"] }

[dev-dependencies]
const-hex = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
cargo-lock = { workspace = true }
git-version = { workspace = true }
tonic-build = { workspace = true }
vergen = { workspace = true, features = ["build", "rustc"] }

[lints]
workspace = true
