[package]
name = "richat-shared"
version = "2.0.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Shared code"
homepage = { workspace = true }
repository = { workspace = true }
license = "Apache-2.0"
keywords = { workspace = true }
publish = { workspace = true }

[dependencies]
affinity = { workspace = true }
humantime-serde = { workspace = true }
http = { workspace = true }
http-body-util = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true, features = ["server-auto", "tokio"] }
prost = { workspace = true }
quinn = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["std", "tls12", "ring"] }
rustls-pemfile = { workspace = true }
serde = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true, features = ["tls", "gzip", "zstd"] }
tracing = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
protobuf-src = { workspace = true }
tonic-build = { workspace = true }

[lints]
workspace = true
