[package]
name = "richat-shared"
version = "3.4.0"
authors = { workspace = true }
edition = { workspace = true }
description = "Richat Shared code"
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
keywords = { workspace = true }
publish = true

[dependencies]
affinity-linux = { workspace = true, optional = true }
anyhow = { workspace = true, optional = true }
base64 = { workspace = true, optional = true }
bs58 = { workspace = true, optional = true }
five8 = { workspace = true, optional = true }
futures = { workspace = true, optional = true }
hostname = { workspace = true, optional = true }
humantime-serde = { workspace = true, optional = true }
http = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, features = ["server-auto", "tokio"], optional = true }
jsonrpc-core = { workspace = true, optional = true }
jsonrpsee-types = { workspace = true, optional = true }
metrics = { workspace = true, optional = true }
prost = { workspace = true, optional = true }
quanta = { workspace = true, optional = true }
quinn = { workspace = true, optional = true }
rcgen = { workspace = true, optional = true }
richat-proto = { workspace = true, optional = true }
rustls = { workspace = true, features = ["std", "tls12"], optional = true }
rustls-pemfile = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"], optional = true }
serde_json = { workspace = true, optional = true }
slab = { workspace = true, optional = true }
socket2 = { workspace = true, optional = true }
solana-rpc-client-api = { workspace = true, optional = true }
solana-sdk = { workspace = true, optional = true }
thiserror = { workspace = true, optional = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"], optional = true }
tonic = { workspace = true, features = ["tls", "gzip", "zstd"], optional = true }
tracing = { workspace = true, optional = true }

[build-dependencies]
anyhow = { workspace = true, optional = true }
protobuf-src = { workspace = true, optional = true }
tonic-build = { workspace = true, optional = true }

[features]
default = [
    "config",
    "five8",
    "jsonrpc",
    "metrics",
    "shutdown",
    "transports",
    "version"
]
config = [
    "dep:affinity-linux",
    "dep:base64",
    "dep:bs58",
    "dep:rcgen",
    "dep:rustls",
    "dep:rustls-pemfile",
    "dep:serde",
    "dep:solana-sdk",
    "dep:thiserror",
    "dep:tokio",
    "five8",
]
five8 = ["dep:five8", "dep:solana-sdk"]
jsonrpc = [
    "dep:anyhow",
    "dep:futures",
    "dep:jsonrpc-core",
    "dep:jsonrpsee-types",
    "dep:metrics",
    "dep:quanta",
    "dep:serde",
    "dep:serde_json",
    "dep:solana-rpc-client-api",
    "metrics",
]
metrics = [
    "dep:http",
    "dep:http-body-util",
    "dep:hyper",
    "dep:hyper-util",
    "dep:tracing",
    "config",
]
shutdown = ["dep:slab"]
transports = [
    "dep:anyhow",
    "dep:futures",
    "dep:humantime-serde",
    "dep:prost",
    "dep:protobuf-src",
    "dep:quinn",
    "dep:richat-proto",
    "dep:socket2",
    "dep:tonic",
    "dep:tonic-build",
    "dep:tracing",
    "config",
    "shutdown",
    "version",
]
version = ["dep:hostname", "dep:serde", "dep:serde_json"]

[lints]
workspace = true
