[package]
name = "richat-plugin-fuzz"
version = "0.0.0"
authors = ["Lamports Dev"]
edition = "2021"
description = "Richat Agave Geyser Plugin Fuzz Tests"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
agave-geyser-plugin-interface = "~2.1.1"
arbitrary = { version = "1.4.1", features = ["derive"] }
libfuzzer-sys = "0.4.8"
prost = "0.11.9"
richat-plugin = { path = ".." }
solana-account-decoder = "~2.1.1"
solana-sdk = "~2.1.1"
solana-storage-proto = "~2.1.1"
solana-transaction-status = "~2.1.1"

[workspace]
members = ["."]

[[bin]]
name = "fuzz_target_account"
path = "fuzz_targets/fuzz_target_account.rs"
test = true
doc = false
bench = false

[[bin]]
name = "fuzz_target_blockmeta"
path = "fuzz_targets/fuzz_target_blockmeta.rs"
test = true
doc = false
bench = false

[[bin]]
name = "fuzz_target_entry"
path = "fuzz_targets/fuzz_target_entry.rs"
test = true
doc = false
bench = false

[[bin]]
name = "fuzz_target_slot"
path = "fuzz_targets/fuzz_target_slot.rs"
test = true
doc = false
bench = false

[[bin]]
name = "fuzz_target_transaction"
path = "fuzz_targets/fuzz_target_transaction.rs"
test = true
doc = false
bench = false
